Bug 170394 - FILESAVE DOCX: corrupt document reported by MS Word if arcTo wR or wH contain floating point values
Summary: FILESAVE DOCX: corrupt document reported by MS Word if arcTo wR or wH contain...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2 all versions
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:26.8.0 target:26.2.1
Keywords: bisected, filter:docx, regression
Depends on: 166335
Blocks: DOCX-Corrupted
  Show dependency treegraph
 
Reported: 2026-01-20 01:19 UTC by Justin L
Modified: 2026-01-23 18:11 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2026-01-20 01:19:24 UTC
Files saved with an arcTo containing a floating point number are reported as corrupt by MS Office.

LO started producing such files in 7.2
with commit 7337e7e74d8bde77a56552bcb7b40bf1668c87b7
Author: Tünde Tóth on Fri Jan 15 10:49:54 2021 +0100
    tdf#61028 OOXML export: fix lost arcTo shape
    Reviewed-on: https://gerrit.libreoffice.org/c/core/+/108874

Steps to reproduce:
-in LO, open attachment 133523 [details] ('SemseterProject-office2013.docx' from bug 104475)
-save as DOCX
-try to open in MS Word
Comment 1 Justin L 2026-01-20 13:44:02 UTC
Apparently this file also suffers from bug 166335 - empty fmla.
Comment 2 Commit Notification 2026-01-20 19:31:02 UTC
justin.luth@collabora.com committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8ad8d27a61fad5af785eb15c58a31c9d82cd23ee

tdf#170394 oox export: arcTo wH and wR must be integer, not decimal

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2026-01-22 13:12:20 UTC
justin.luth@collabora.com committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/079a224990301d322007b3efe8a7bfec4c90741e

tdf#170394 oox export: arcTo wH and wR must be integer, not decimal

It will be available in 26.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.