tdf#170394 oox export: arcTo wH and wR must be integer, not decimal

MS Office reports files as corrupt if these values
contain a floating point number.

This started in LO 7.2 with
commit 7337e7e74d8bde77a56552bcb7b40bf1668c87b7.

Since then, 3 more instances of export XML_arcTo have appeared,
but all of them used std:lround.
The nice thing about std:lround is that it will not return 0,
but rather 1 for a small floating point value.
That was also recommended by what I found on the Internet,
so I gratefully copied that usage.

Change-Id: I4712cb516ed6220a079d2b8dfee0013e8f0c9c59
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197665
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>